@startuml
'https://plantuml.com/class-diagram

skinparam classAttributeIconSize 0
skinparam linetype ortho

class EventManager{
- listeners: ArrayList
+ subscribe(EventListener listener)
+ unsubscribe(EventListener listener)
+ notify(Strategy strategy,String type)
}

interface EventListeners{
+ warning(Strategy strategy,String type)
}

class EmergencyServiceAgencyListener{
+ warning (Strategy strategy,String type)
}

class FMListener{
+ warning (Strategy strategy,String type)
}

class AppListener{
+ warning (Strategy strategy,String type)
}

class TrafficPoliceListener{
+ warning (Strategy strategy,String type)
}

class EarlyWarningSystem{
- eventManager: EventManager
+ NotifyWarning(String type)
}

EmergencyServiceAgencyListener ...|> EventListeners
FMListener ...|> EventListeners
AppListener ...|> EventListeners
TrafficPoliceListener ...|> EventListeners
EventManager o--> EventListeners
EarlyWarningSystem o--> EventManager
@enduml